revolt bot client / deploy to pages

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     "headers": {
                         "Accept": "*/*",
                         "Content-Type": "application/json",
-                        "x-session-token": thetoken
+                        "x-bot-token": thetoken
                     },
                     "body": `{
                         "content":"${document.getElementById("a").value}"
@@ -186,7 +186,7 @@
                         "headers": {
                             "Accept": "*/*",
                             "Content-Type": "application/json",
-                            "x-session-token": thetoken
+                            "x-bot-token": thetoken
                         },
                         "body": `{
                         "content":"${document.getElementById("a").value}",
@@ -206,7 +206,7 @@
                             "headers": {
                                 "Accept": "*/*",
                                 "Content-Type": "application/json",
-                                "x-session-token": thetoken
+                                "x-bot-token": thetoken
                             },
                             "body": `{
                         "content":"${document.getElementById("a").value}",
@@ -226,7 +226,7 @@
                                 "headers": {
                                     "Accept": "*/*",
                                     "Content-Type": "application/json",
-                                    "x-session-token": thetoken
+                                    "x-bot-token": thetoken
                                 },
                                 "body": `{
                         "nonce":"",
