--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Retaped</title>
+    <title>Revolt Bot Client</title>
 </head>
 
 <body>
-    <h1 id="name">Retaped</h1>
-    <h4 id="descri">The revolt.chat client re-taped from the one that's held together by duct tape and bad code</h4>
+    <h1 id="name">Revolt Bot Client</h1>
+    <h4 id="descri">fork of Retaped, but for bots.</h4>
     <br />
     <div id="loginoe">
         <input id="token" alt="aaa" placeholder="Token">
