--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                 "headers": {
                                     "Accept": "*/*",
                                     "Content-Type": "application/json",
-                                    "x-session-token": thetoken
+                                    "x-bot-token": thetoken
                                 },
                                 "body": document.getElementById("a").value,
                                 "method": "POST"
@@ -275,7 +275,7 @@
                         "credentials": "omit",
                         "headers": {
                             "Accept": "*/*",
-                            "x-session-token": thetoken
+                            "x-bot-token": thetoken
                         },
                         "method": "GET",
                     }).then(response => response.json())
@@ -289,7 +289,7 @@
                 "credentials": "omit",
                 "headers": {
                     "Accept": "*/*",
-                    "x-session-token": thetoken
+                    "x-bot-token": thetoken
                 },
                 "method": "GET",
             }).then(response => response.json())
@@ -302,7 +302,7 @@
                     "credentials": "omit",
                     "headers": {
                         "Accept": "*/*",
-                        "x-session-token": thetoken
+                        "x-bot-token": thetoken
                     },
                     "method": "GET",
                 }).then(response => response.json())
@@ -316,7 +316,7 @@
                     "credentials": "omit",
                     "headers": {
                         "Accept": "*/*",
-                        "x-session-token": thetoken
+                        "x-bot-token": thetoken
                     },
                     "method": "GET",
                 }).then(response => response.json())
@@ -349,7 +349,7 @@
                                 "credentials": "omit",
                                 "headers": {
                                     "Accept": "*/*",
-                                    "x-session-token": thetoken
+                                    "x-bot-token": thetoken
                                 },
                                 "method": "GET",
                             }).then(response => response.json())
